--- a/app/assets/stylesheets/box_expandable.css.sass
+++ b/app/assets/stylesheets/box_expandable.css.sass
@@ -19,5 +19,5 @@
   // border-width: 0
 
 .box-2x
-  width: $box-width * 2 + $box-gap
+  @include span-columns(6)
   height: $box-height * 2 + $box-gap
