--- a/app/assets/stylesheets/box.css.sass
+++ b/app/assets/stylesheets/box.css.sass
@@ -8,6 +8,12 @@
   text-align: center
   overflow: hidden
 
+  > .box-link
+    display: block
+    width: 100%
+    height: 100%
+    color: $color-font
+
 #box-container
   position: relative
   overflow: hidden
