Limit image size for technologies page

--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -38,7 +38,7 @@
   <div class="box box-tech">
     <a class="box-link" href="/technologies">
       <div class="tech-title" target="_blank">
-        <%= image_tag tech.image.url %>
+        <%= image_tag tech.image_url %>
       </div>
       <div class="tech-description">
         <%= tech.description.html_safe %>
