completed navbar dropdown taginputs front-end features

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -9,6 +9,7 @@
 @import neat
 
 @import base
+@import components
 @import slide
 @import loading
 @import video_modal
@@ -20,3 +21,4 @@
 @import box_service
 @import box_client
 @import dropdown_tag
+@import jquery.tagsinput
