change select tags to check option in navbar selection

--- a/app/assets/stylesheets/components.sass
+++ b/app/assets/stylesheets/components.sass
@@ -1,6 +1,7 @@
 .nav-btn
-  background-color: #009ce0
+  background-color: $main-color
+  font-weight: bold
   border: 0
   color: white
-  margin: 3px 18px
-  padding: 3px 5px
+  margin-left: 38px
+  padding-top: 5px
