--- a/app/assets/stylesheets/dropdown_tag.css.sass
+++ b/app/assets/stylesheets/dropdown_tag.css.sass
@@ -21,3 +21,10 @@
 
       &:hover
         background: #252525
+
+      & > i
+        padding-right: 10px
+        color: $color-main
+
+      & > .selected
+        color: white
