--- a/app/assets/stylesheets/box.css.sass
+++ b/app/assets/stylesheets/box.css.sass
@@ -7,6 +7,7 @@
   background-color: white
   text-align: center
   overflow: hidden
+  box-shadow: 0 1px 5px rgba(black, .1)
 
   > .box-link
     display: block
