--- a/app/assets/stylesheets/dropdown_tag.css.sass
+++ b/app/assets/stylesheets/dropdown_tag.css.sass
@@ -20,12 +20,15 @@
     .nav-btn
       background-color: $color-link
       @include linear-gradient(lighten($color-link, 10%), darken($color-link, 10%))
+      .icon-sort-down
+        padding-bottom: 2px
+
       .nav-btn-inner
         font-weight: bold
         border: 0
         color: white
         margin-left: 42px
-        padding-top: 5px
+        padding: 5px 0
 
     &> li > a
       color: #FFF
