change position of dropdown arrow in navbar

--- a/app/assets/stylesheets/dropdown_tag.css.sass
+++ b/app/assets/stylesheets/dropdown_tag.css.sass
@@ -9,6 +9,11 @@
     padding: 10px 15px
     font-size: 16px
     color: white
+    .icon-sort-down
+      right: 0px
+      top: -3px
+      position: relative
+
 
   .dropdown-menu
     margin: 0
