--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -6,8 +6,9 @@
       .dropdown.dropdown-tag
         - cookie_tag_arr = cookies[:tag].split(',')
         a.dropdown-toggle data-toggle="dropdown" href="#"
-          = cookie_tag_arr.join('&nbsp;&nbsp;').html_safe
-          | &nbsp;&nbsp;
+          span
+            = cookie_tag_arr.join('&nbsp;&nbsp;').html_safe
+            | &nbsp;&nbsp;
           i.icon-sort-down
         ul.dropdown-menu.pull-right role="menu" aria-labelledby="dLabel"
           - ['all', 'ruby', 'javascript'].each do |value|
