--- a/app/assets/stylesheets/variables.css.sass
+++ b/app/assets/stylesheets/variables.css.sass
@@ -1,6 +1,7 @@
 //$main-color: #0099cc
 $main-color: #00aff0
 
+$color-bg: #E7F1F5
 $color-link: #009ce0
 $color-font: #535b60
 $color-heading: #121b21
@@ -21,5 +22,6 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
 
 $main-width: $box-width * 4 + $box-gap * 3
 
-
 $font-family: "Open Sans", "Microsoft YaHei", "微软雅黑", "Hiragino Sans GB", "Hiragino Sans GB W3", "Helvetica Neue", Arial, sans-serif
+
+$header-height: 70px
