--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,7 @@ html
     = render '/home/header'
     = render '/refinery/header'
 
-    #box-container.container style="margin-top: 50px;"
+    #box-container.container
       = yield
 
     .container
