--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -1,5 +1,5 @@
 - unless response.status == 404
-  #menu-wrapper
+  .header
     .container style="position: relative;"
       = render partial: "/refinery/menu", locals: {dom_id: 'menu', css: 'menu'}
 
