add message manage model

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,12 +12,13 @@ html
           h1 Shinetech Wuhan
           p Welcome to Shinetech Wuhan. Our clients are solving some of the most pressing problems of our time. We deliver disruptive thinking and empowering technology to help them succeed.
           div.masthead-tip Scroll to enter
-      
+
     = render '/home/header'
     = render '/refinery/header'
 
     #box-container.container
       = yield
+      = render '/home/guest_book'
 
     .container
       = render 'home/footer'
