--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -130,6 +130,24 @@ a
       color: $color-font
       text-shadow: 1px 1px rgba($color-font, .5)
 
+#guest-book
+  font-weight: bold
+  position: fixed
+  bottom: 0px
+  right: 20px
+  background: $main-color none repeat scroll 0 0
+  color: #fff
+  padding: 10px
+  padding-bottom: 7px
+  border-top-left-radius: 5px
+  border-top-right-radius: 5px
+  -moz-border-top-left-radius: 5px
+  -moz-border-top-right-radius: 5px
+
+  #guest-mini
+    .icon-chevron-up
+      padding-left: 12px
+
 .footer
   font-size: 11px
   margin-top: 40px
