--- a/app/assets/stylesheets/dropdown_tag.css.sass
+++ b/app/assets/stylesheets/dropdown_tag.css.sass
@@ -53,5 +53,5 @@
         padding-right: 10px
         visibility: hidden
 
-      & > .selected
-        visibility: visible
+    & > li > .selected > i
+      visibility: visible
