change UI services maxi part

--- a/app/assets/stylesheets/box_service.css.sass
+++ b/app/assets/stylesheets/box_service.css.sass
@@ -13,9 +13,12 @@
     height: 100%
 
   .maxi
+    padding: 10px 30px
+    text-align: left
     .icon
+      padding-right: 20px
+      padding-bottom: 10px
       float: left
-      margin: 10px 20px
 
     h2
       margin-bottom: 40px
