--- a/app/views/refinery/pages/blog.html.erb
+++ b/app/views/refinery/pages/blog.html.erb
@@ -1,13 +1,20 @@
-<% @blogs.each do |blog| %>
-  <div class="box shade-box background-image-adaptive-box" style="background-image: url(<%= blog.image_url %>);">
-    <div class="shade">
-      <div class="posted-date"><%= blog.created_at %></div>
-      <div class="blog-content">
-        <%= blog.text %>
-      </div>
-      <div class="nick-name">
-        <%= link_to blog.profile_link, blog.profile_link, target: '_blank' %>
+<% if @blogs.present? %>
+  <% @blogs.each do |blog| %>
+    <div class="box shade-box background-image-adaptive-box" style="background-image: url(<%= blog.image_url %>);">
+      <div class="shade">
+        <div class="posted-date"><%= blog.created_at %></div>
+        <div class="blog-content">
+          <%= blog.text %>
+        </div>
+        <div class="nick-name">
+          <%= link_to blog.profile_link, blog.profile_link, target: '_blank' %>
+        </div>
       </div>
     </div>
+  <% end %>
+<% else %>
+  <div class="box box-about box-double">
+    <h3>No any blog</h3>
+    <p>Please click the <a href="/auth/weibo", target="_blank">link</a> to authticate your third-party account.</p>
   </div>
 <% end %>
