--- a/app/views/refinery/admin/images/_grid_view.html.erb
+++ b/app/views/refinery/admin/images/_grid_view.html.erb
@@ -1,23 +1,28 @@
 <ul id="image_grid" class="<%= ['clearfix', 'pagination_frame', pagination_css_class].compact.join(' ') %>">
   <% @images.each_with_index do |image, index| -%>
-    <li id="image_<%= image.id %>" class="image_<%= index % 5 %>" style="height: 205px; max-height:205px;">
-    <b><%= image.version %></b>
-    <%= image_fu image, '135x135#c', :title => image.title %>
+    <!-- Override: add style -->
+    <li id="image_<%= image.id %>" class="image_<%= index % 5 %>">
+
+      <!-- Override: add version -->
+      <div style="height: 120px; line-height: 120px;">
+        <%= image_fu image, "120x120", style: "vertical-align: middle;" %>
+      </div>
+
       <span class="actions">
         <%= link_to refinery_icon_tag('eye.png'), image.url,
-          :target => '_blank',
-          :title => t('.view_live_html') %>
+                    :target => '_blank',
+                    :title => t('.view_live_html') %>
         <%= link_to refinery_icon_tag('application_edit.png'),
-          refinery.edit_admin_image_path(image),
-          :title => t('edit', :scope => 'refinery.admin.images') %>
+                    refinery.edit_admin_image_path(image),
+                    :title => t('edit', :scope => 'refinery.admin.images') %>
         <%= link_to refinery_icon_tag('delete.png'),
-          refinery.admin_image_path(image),
-          :class => 'cancel confirm-delete',
-          :title => t('delete', :scope => 'refinery.admin.images'),
-          :data => {
-          :confirm => t('message', :scope => 'refinery.admin.delete', :title => image.title)
-        },
-          :method => :delete %>
+                    refinery.admin_image_path(image),
+                    :class => 'cancel confirm-delete',
+                    :title => t('delete', :scope => 'refinery.admin.images'),
+                    :data => {
+                      :confirm => t('message', :scope => 'refinery.admin.delete', :title => image.title)
+                    },
+                    :method => :delete %>
       </span>
     </li>
   <% end -%>
