change blog blank message

--- a/app/views/refinery/pages/blog.html.erb
+++ b/app/views/refinery/pages/blog.html.erb
@@ -15,6 +15,6 @@
 <% else %>
   <div class="box box-about box-double">
     <h3>No any blog</h3>
-    <p>Please click the <a href="/auth/weibo", target="_blank">link</a> to authticate your third-party account.</p>
+    <p>Will add more blogs later.</p>
   </div>
 <% end %>
