--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -6,9 +6,6 @@ html
   line-height: 1.8em
   color: $color-font
 
-body
-  margin-top: $header-height + 20px
-
 h1, h2, h3, h4
   color: $color-heading
   line-height: 1em
@@ -49,17 +46,14 @@ a
   margin-bottom: -32px
 
 .masthead
-  @include position(fixed, 0px 0px 0px 0px)
-  background: rgba(white, .8)
-  z-index: 9000
-
-.masthead-content
-  @include position(absolute, 0px 0px 0 0px)
+  @include position(fixed, 0px 0px 0 0px)
   @include linear-gradient(to top, #a5cad6, darken(#a5cad6, 10%))
   margin: 0
-  z-index: 9001
-  box-shadow: 0 2px 5px rgba(black, .5)
+  height: 0
   color: white
+  overflow: hidden
+  box-shadow: 0 2px 5px rgba(black, .5)
+  z-index: 9000
 
   h1
     margin-top: 50px
@@ -69,26 +63,12 @@ a
     border: 0
     text-shadow: 1px 1px 5px rgba(#333, .5)
 
-.masthead-tip
-  font-family: Quintessential
-  margin: 30px 0 20px 0
-  text-align: center
-  color: white
-  font-size: 24px
-
+  p
+    margin-bottom: 50px
 
 .container
   @include outer-container
   width: $max-width
-
-#logo
-  height: 100px
-  line-height: 100px
-  text-align: center
-  border-bottom: 1px solid #ddd
-  font-size: 16px
-  a
-    color: $main-color!important
 
 .header
   position: fixed
@@ -100,6 +80,17 @@ a
 
   > .container
     border-bottom: 1px solid #ddd
+
+.logo
+  float: left
+
+  a
+    display: block
+    height: 70px
+    line-height: 70px
+    margin-right: 30px
+    font-size: 20px
+    color: $color-font
 
 #menu
   float: left
