completed box responsive

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -68,7 +68,8 @@ a
 
 .container
   @include outer-container
-  width: $max-width
+  max-width: $max-width
+  min-width: $box-width
 
 .header
   position: fixed
