--- a/app/assets/stylesheets/box.css.sass
+++ b/app/assets/stylesheets/box.css.sass
@@ -2,7 +2,8 @@
   @include span-columns(3)
   @include omega(4n)
   position: relative
-  height: $box-height
+  width: $box-width
+  min-height: $box-height
   margin-bottom: $gutter
   background-color: white
   text-align: center
