--- a/app/assets/stylesheets/box_service.css.sass
+++ b/app/assets/stylesheets/box_service.css.sass
@@ -23,6 +23,7 @@
     h2
       margin-bottom: 20px
 
-.box-service.box-expanded
-  @include span-columns(6)
-  height: $box-height * 2 + $gutter
+  &.box-expanded
+    @include span-columns(6)
+    min-height: $box-height * 2 + $gutter
+    min-width: $box-width
