--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -1,6 +1,9 @@
 .box-staff
   &.box-expanded
-    @include span-columns(9)
+    @include span-columns(6)
+    min-height: $box-height //* 2 + $box-gap
+    max-width: $box-width * 3 + $box-gap * 2
+    min-width: $box-width
 
 .staff-thumb
   float: left
@@ -22,12 +25,10 @@
   background: $main-color
 
 .staff-info
-  margin-left: $box-width
   padding: 10px
 
 .staff-description
-  max-height: 150px
-  overflow: hidden
+  display: inline
 
 .social-links
   margin-top: 20px
