completed responstive UI

--- a/app/assets/stylesheets/box_service.css.sass
+++ b/app/assets/stylesheets/box_service.css.sass
@@ -26,4 +26,4 @@
   &.box-expanded
     @include span-columns(6)
     min-height: $box-height * 2 + $gutter
-    min-width: $box-width
+    width: $box-width * 2 + $box-gap
