--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -1,9 +1,8 @@
 .box-staff
   &.box-expanded
     @include span-columns(6)
-    min-height: $box-height //* 2 + $box-gap
-    max-width: $box-width * 3 + $box-gap * 2
-    min-width: $box-width
+    min-height: $box-height
+    width: $box-width * 2 + $box-gap
 
 .staff-thumb
   float: left
@@ -13,7 +12,7 @@
 
 .staff-name
   position: absolute
-  bottom: 20px
+  top: 239px
   left: 0
   padding: 0 10px
   color: white
