Ajax refresh when switching tag

--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -27,7 +27,7 @@
           | &nbsp;&nbsp;
           i.icon-sort-down
         ul.dropdown-menu.pull-right role="menu" aria-labelledby="dLabel"
-          - ['', 'rails', 'javascript', 'outsourcing'].each do |value|
+          - ['', 'ruby', 'javascript', 'outsourcing'].each do |value|
             li
               a data-tag=value
                 i.icon-ok
