Refactor route to support '/page/id' format
* Use crossroads.js instead of path.js
* Modify box-expandable html and css
* Modify routes

--- a/app/assets/stylesheets/box.css.sass
+++ b/app/assets/stylesheets/box.css.sass
@@ -3,7 +3,7 @@
   @include omega(4n)
   position: relative
   width: $box-width
-  min-height: $box-height
+  height: $box-height
   margin-bottom: $gutter
   background-color: white
   text-align: center
