--- a/app/assets/stylesheets/box_expandable.css.sass
+++ b/app/assets/stylesheets/box_expandable.css.sass
@@ -2,9 +2,16 @@
   .mini
     cursor: pointer
     display: block
+    height: 100%
+
+    > a
+      display: block
+      height: 100%
+      color: $color-font
 
   .maxi
     display: none
+    height: 100%
 
 .box-expandable.box-expanded
   .mini
