--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,9 @@ html
 
     #box-container.container
       = yield
-      = render '/home/guest_book'
 
     .container
       = render 'home/footer'
+
+    .container
+      = render '/home/guest_book'
