completed add box features

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,7 +2,8 @@
 //= require font-awesome
 
 @import variables
-@import bootstrap
+@import bootstrap-dropdown
+@import bootstrap-modal
 
 // mixin 和布局
 @import bourbon
@@ -19,6 +20,7 @@
 @import box_tech
 @import box_service
 @import box_client
+@import custom_boxes
 @import message
 @import dropdown_tag
 @import mobile
