add box create messages

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -45,6 +45,14 @@ a
   margin-top: 32px
   margin-bottom: -32px
 
+#message_container
+  z-index: 9999
+  text-align: center
+  width: 100%
+  position: fixed
+  top: 0px
+  display: none
+
 .masthead
   @include position(fixed, 0px 0px 0 0px)
   @include linear-gradient(to top, #a5cad6, darken(#a5cad6, 10%))
