--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html
       .container
         h1 Shinetech Wuhan
         p Welcome to Shinetech Wuhan. Our clients are solving some of the most pressing problems of our time. We deliver disruptive thinking and empowering technology to help them succeed.
+    = render 'common/message'
     = render '/refinery/header'
 
     /= render '/home/header'
