completed statical box

--- a/app/assets/stylesheets/mobile.sass
+++ b/app/assets/stylesheets/mobile.sass
@@ -3,9 +3,11 @@
     padding: 0 2px
     font-size: 12px
 
+  .box
+    width: $box-width
+
   .box-service
     &.box-expanded
-      width: $box-width
       .icon, h2
         padding: 0
         width: 100%
@@ -13,7 +15,6 @@
 
   .box-staff
     &.box-expanded
-      width: $box-width
       min-height: $box-height * 2
       .staff-info
         h2
