--- a/app/assets/stylesheets/box_expandable.css.sass
+++ b/app/assets/stylesheets/box_expandable.css.sass
@@ -20,11 +20,6 @@
   .maxi
     display: block
 
-// .box-expanded
-  // width: $box-double-width
-  // height: $box-double-height
-  // border-width: 0
-
 .box-2x
-  @include span-columns(6)
-  height: $box-height * 2 + $box-gap
+  width: $box-width-2x
+  height: $box-height-2x
