--- a/app/assets/stylesheets/box_service.css.sass
+++ b/app/assets/stylesheets/box_service.css.sass
@@ -24,6 +24,5 @@
       margin-bottom: 20px
 
   &.box-expanded
-    @include span-columns(6)
-    min-height: $box-height * 2 + $gutter
-    width: $box-width * 2 + $box-gap
+    min-height: $box-height-2x
+    width: $box-width-2x
