--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -1,8 +1,7 @@
 .box-staff
   &.box-expanded
-    @include span-columns(6)
     min-height: $box-height
-    width: $box-width * 2 + $box-gap
+    width: $box-width-2x
 
 .staff-thumb
   float: left
