--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -48,7 +48,7 @@
   </div>
 <% end %>
 
-<div class="box box-double box-about">
+<div class="box box-double box-about" data-ss-colspan="2">
   <h3> About ShineNext</h3>
   <p>
     We are a software company and a community of passionate, purpose-led individuals.
