--- a/app/assets/stylesheets/variables.css.sass
+++ b/app/assets/stylesheets/variables.css.sass
@@ -8,19 +8,15 @@ $color-heading: #121b21
 $color-main: $main-color
 // $color-main: #27A1C5
 
-// neat grid
-$max-width: 1170px
-$column: 90px
 $gutter: 20px
 
-$box-width: 279px
-$box-height: 288px
-$box-gap: $gutter
-$box-double-width: $box-width * 2 + $box-gap
-$box-double-height: $box-height * 2 + $box-gap
-$box-triple-width: $box-width * 3 + $box-gap * 2
+$box-width: 280px // 3 cols with 80px (width) and 20px (gutter)
+$box-width-2x: $box-width * 2 + $gutter
+$box-width-3x: $box-width * 3 + $gutter * 2
+$box-width-4x: $box-width * 4 + $gutter * 3
 
-$main-width: $box-width * 4 + $box-gap * 3
+$box-height: 288px
+$box-height-2x: $box-height * 2 + $gutter
 
 $font-family: "Open Sans", "Microsoft YaHei", "微软雅黑", "Hiragino Sans GB", "Hiragino Sans GB W3", "Helvetica Neue", Arial, sans-serif
 
