move boxes page to home

--- a/app/assets/stylesheets/custom_boxes.sass
+++ b/app/assets/stylesheets/custom_boxes.sass
@@ -7,7 +7,7 @@
     border: 14px solid #A2AAB1
     color: #A2AAB1
     width: $box-width
-    height: $box-height
+    height: $box-height - 28px
 
 #newBoxModal
   .field
